--- a/src/assets/coral/sass/_var.scss
+++ b/src/assets/coral/sass/_var.scss
@@ -11,6 +11,8 @@ $color-error-dark: #f50057;
 $color-warning: #fb8c00;
 $color-warning-dark: #fb8c00;
 $color-light: #f2f2f2;
+$color-selected: #363636;
+$color-selected-bg: #f6f6f6;
 $color-light-dark: rgb(221, 221, 221);
 
 /*  button */
