--- a/src/assets/coral/css/coral.css
+++ b/src/assets/coral/css/coral.css
@@ -7,8 +7,8 @@
 :root {
   --blue: #34495e;
   --green: #e74c3c;
-  --yellow: #c9c243;
-  --orange: #ffa644;
+  --yellow: #C9C243;
+  --orange: #FFA644;
   --red: #3498db;
 }
 
@@ -106,7 +106,7 @@ html {
 }
 
 .no-gutters > .col,
-.no-gutters > [class*="col-"] {
+.no-gutters > [class*=col-] {
   padding-right: 0;
   padding-left: 0;
 }
@@ -2085,26 +2085,26 @@ html {
   display: none;
   padding: 1rem;
   background: #fff;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #CCC;
 }
 
-.tabs input[type="radio"] {
+.tabs input[type=radio] {
   display: none;
 }
 
-.tabs input[type="radio"]:checked + label {
+.tabs input[type=radio]:checked + label {
   background: #fff;
   border-bottom: 2px solid #2ec866;
   font-weight: bold;
 }
 
-.tabs input[type="radio"]:checked + label + .tab {
+.tabs input[type=radio]:checked + label + .tab {
   display: block;
 }
 
 @media (max-width: 45em) {
   .tabs .tab,
-  .tabs label {
+.tabs label {
     order: initial;
   }
 
@@ -2114,10 +2114,10 @@ html {
     margin-top: 0.2rem;
     background: #2ec866;
     color: #fff;
-    padding: 10px;
+    padding: 10PX;
   }
 
-  .tabs input[type="radio"]:checked + label {
+  .tabs input[type=radio]:checked + label {
     border: none;
   }
 
@@ -2135,13 +2135,11 @@ table {
   background: #f7f7f7;
 }
 
-.ishover tbody tr:hover,
-.ishover th:hover {
+.ishover tbody tr:hover, .ishover th:hover {
   background-color: #f7f7f7;
 }
 
-.table th,
-.table td {
+.table th, .table td {
   padding: 10px;
   text-align: left;
   border: solid 1px #f7f7f7;
@@ -2155,23 +2153,22 @@ table {
 
 @media only screen and (max-width: 700px) {
   .table-responsive table,
-  .table-responsive thead,
-  .table-responsive tbody,
-  .table-responsive tr,
-  .table-responsive th,
-  .table-responsive td {
+.table-responsive thead,
+.table-responsive tbody,
+.table-responsive tr,
+.table-responsive th,
+.table-responsive td {
     display: block;
   }
 
-  .table-responsive thead,
-  .table-responsive th {
+  .table-responsive thead, .table-responsive th {
     display: none;
   }
 
   .table-responsive td {
     padding-left: 150px;
     position: relative;
-    background: #fff;
+    background: #FFF;
     margin-top: -1px;
   }
 
@@ -2196,8 +2193,7 @@ table {
     /* 1 fois la taille de la police */
   }
 }
-.table-light td,
-.table-light th {
+.table-light td, .table-light th {
   padding: 10px;
   text-align: left;
   font-size: 14px;
@@ -2215,11 +2211,11 @@ table {
 
 @media only screen and (max-width: 700px) {
   .light-responsive table,
-  .table-responsive thead,
-  .light-responsive tbody,
-  .light-responsive tr,
-  .light-responsive th,
-  .light-responsive td {
+.table-responsive thead,
+.light-responsive tbody,
+.light-responsive tr,
+.light-responsive th,
+.light-responsive td {
     display: block;
   }
 
@@ -2230,7 +2226,7 @@ table {
   .light-responsive td {
     padding-left: 150px;
     position: relative;
-    background: #fff;
+    background: #FFF;
     margin-top: -1px;
   }
 
@@ -2249,7 +2245,7 @@ table {
     bottom: 0;
     background: turquoise;
     border-bottom: 1px solid white;
-    color: #fff;
+    color: #FFF;
     /* pour center le text */
     display: flex;
     align-items: center;
@@ -2449,41 +2445,6 @@ table {
   border-top-color: #cccc;
 }
 
-.dropdown {
-  width: auto;
-  height: auto;
-  position: relative;
-  display: inline-block;
-  background-color: transparent;
-}
-.dropdown .dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: transparent;
-  min-width: 160px;
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-.dropdown .dropdown-menu .arrow-up {
-  display: block;
-  border-bottom-color: #f9f9f9;
-  margin-left: 10px;
-  margin-top: -10px;
-}
-.dropdown .dropdown-menu .dropdown-content {
-  display: block;
-  background-color: #fff;
-}
-.dropdown .dropdown-menu .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-.dropdown .dropdown-menu .dropdown-content a:hover {
-  background-color: #f7f7f7;
-}
-
 /*radio */
 .form-radio {
   -webkit-appearance: none;
@@ -2584,13 +2545,27 @@ table {
 .group-button {
   display: table;
   width: 100%;
+  margin: 10px 0px;
+}
+
+.group-button.inline {
+  display: flex;
+  flex-direction: row;
+}
+
+.group-button.right {
+  justify-content: flex-end;
+}
+
+.group-button.center {
+  justify-content: center;
 }
 
 .button {
   min-width: 60px;
   min-height: 25px;
   padding: 10px 10px;
-  margin: 10px 5px;
+  margin: 1px 5px;
   border: 1px solid #ccc;
   background: #f7f7f7;
   color: #666;
@@ -2816,10 +2791,7 @@ table {
   transition: opacity 0.2s ease-out;
 }
 
-.a-field
-  .field__input:not(:placeholder-shown)
-  ~ .field__label-wrap
-  .field__label {
+.a-field .field__input:not(:placeholder-shown) ~ .field__label-wrap .field__label {
   opacity: 0;
   bottom: 15px;
 }
@@ -2852,8 +2824,7 @@ table {
   line-height: 1;
   font-size: 1em;
   pointer-events: none;
-  transition: bottom 0.2s cubic-bezier(0.9, -0.15, 0.1, 1.15),
-    opacity 0.2s ease-out;
+  transition: bottom 0.2s cubic-bezier(0.9, -0.15, 0.1, 1.15), opacity 0.2s ease-out;
   will-change: bottom, opacity;
 }
 
@@ -3388,6 +3359,12 @@ table {
 .menu-list a.is-active {
   background-color: #2ec866;
   color: #fff;
+  opacity: 0.6;
+}
+
+.menu-list a.selected {
+  background-color: #f6f6f6;
+  color: #363636;
 }
 
 .menu-list li ul {
@@ -3409,6 +3386,7 @@ table {
   color: #7a7a7a;
   font-size: 0.75em;
   letter-spacing: 0.1em;
+  margin-left: 5px;
   text-transform: uppercase;
 }
 
@@ -3505,6 +3483,114 @@ table {
   color: #fff;
 }
 
+.dropdown {
+  display: inline-flex;
+  position: relative;
+  vertical-align: top;
+}
+
+.dropdown.is-active .dropdown-menu,
+.dropdown.is-hoverable:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown.is-right .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+
+.dropdown.is-up .dropdown-menu {
+  bottom: 100%;
+  padding-bottom: 4px;
+  padding-top: initial;
+  top: auto;
+}
+
+.dropdown-menu {
+  display: none;
+  left: 0;
+  min-width: 12rem;
+  padding-top: 4px;
+  position: absolute;
+  top: 100%;
+  z-index: 20;
+  transition: all 0.3s;
+}
+
+.dropdown-content {
+  width: 100%;
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+}
+
+.dropdown-item {
+  color: #4a4a4a;
+  display: block;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  padding: 0.375rem 1rem;
+  position: relative;
+}
+
+a.dropdown-item,
+button.dropdown-item {
+  padding-right: 3rem;
+  text-align: left;
+  white-space: nowrap;
+}
+
+a.dropdown-item:hover,
+button.dropdown-item:hover {
+  background-color: whitesmoke;
+  color: #0a0a0a;
+}
+
+a.dropdown-item.is-active,
+button.dropdown-item.is-active {
+  background-color: #2ec866;
+  color: #fff;
+}
+
+.dropdown-divider {
+  background-color: #dbdbdb;
+  border: none;
+  display: block;
+  height: 1px;
+  margin: 0.5rem 0;
+}
+
+.accordion {
+  transition: 0.4s;
+}
+
+.accordion.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: "▼";
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.accordion.active:after {
+  content: "▲";
+}
+
+.accordion-content {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
 /* last import */
 .rounded {
   border-radius: 10em;
@@ -3537,7 +3623,7 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
   height: 5px;
 }
 
@@ -3548,13 +3634,13 @@ a {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #999;
   border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #777;
 }
 
 /*# sourceMappingURL=coral.css.map */
