--- a/src/assets/coral/sass/_controls.scss
+++ b/src/assets/coral/sass/_controls.scss
@@ -191,40 +191,40 @@
 }
 
 //dropdown
-.dropdown {
-  width: auto;
-  height: auto;
-  position: relative;
-  display: inline-block;
-  background-color: transparent;
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    background-color: transparent;
-    min-width: 160px;
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    .arrow-up {
-      display: block;
-      border-bottom-color: #f9f9f9;
-      margin-left: 10px;
-      margin-top: -10px;
-    }
-    .dropdown-content {
-      display: block;
-      background-color: #fff;
-      a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-      }
-      a:hover {
-        background-color: #f7f7f7;
-      }
-    }
-  }
-}
+// .dropdown {
+//   width: auto;
+//   height: auto;
+//   position: relative;
+//   display: inline-block;
+//   background-color: transparent;
+//   .dropdown-menu {
+//     display: none;
+//     position: absolute;
+//     background-color: transparent;
+//     min-width: 160px;
+//     box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+//     z-index: 1;
+//     .arrow-up {
+//       display: block;
+//       border-bottom-color: #f9f9f9;
+//       margin-left: 10px;
+//       margin-top: -10px;
+//     }
+//     .dropdown-content {
+//       display: block;
+//       background-color: #fff;
+//       a {
+//         color: black;
+//         padding: 12px 16px;
+//         text-decoration: none;
+//         display: block;
+//       }
+//       a:hover {
+//         background-color: #f7f7f7;
+//       }
+//     }
+//   }
+// }
 
 // 02.11.2018
 /*radio */
