--- a/src/assets/coral/sass/coral.scss
+++ b/src/assets/coral/sass/coral.scss
@@ -10,6 +10,8 @@
 @import "_notification.scss";
 @import "_datatable.scss";
 @import "menu.scss";
+@import "dropdown.scss";
+@import "accordion.scss";
 
 /* last import */
 @import "_suppless.scss";
@@ -23,7 +25,7 @@ a {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
   height: 5px;
 }
 
@@ -34,11 +36,11 @@ a {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #999;
   border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #777;
 }
