--- a/src/assets/coral/sass/_buttons.scss
+++ b/src/assets/coral/sass/_buttons.scss
@@ -166,3 +166,18 @@
   background: rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
+.btn_icon {
+  margin: 0px 5px;
+  background: transparent;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background 0.3s;
+}
+
+.btn_icon:active {
+  background: rgba(255, 225, 255, 0.1);
+}
