--- a/src/assets/coral/sass/_suppless.scss
+++ b/src/assets/coral/sass/_suppless.scss
@@ -1,16 +1,37 @@
-.rounded{
-    border-radius: $rounder;
-  }
-  .isMiddle{
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-  }
-  .isRight{
-    float: right;
-  }
-  .isCenter{
-    text-align: center;
-  }
+.rounded {
+  border-radius: $rounder;
+}
+.isMiddle {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.isRight {
+  float: right;
+}
+.isCenter {
+  text-align: center;
+}
+.bulle {
+  position: fixed;
+  border-radius: 25%;
+  padding: 2px;
+  font-size: 11px;
+  color: #fff;
+  margin-left: 14px;
+  margin-top: -10px;
+}
+.count {
+  border-radius: 50%;
+  color: #fff;
+  font-size: 10px;
+  height: 15px;
+  width: 15px;
+  line-height: 15px;
+  text-align: center;
+  position: absolute;
+  margin-left: 10px;
+  margin-top: -10px;
+}
